se agregaron componentes y servicios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,285 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-primary py-0 ">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="...">
-      <img src="images/iconos/1x/Recurso 50.png" alt="Bootstrap" width="" height="30">
-    </a>
-      <ul class="list-group list-group-horizontal list-unstyled ms-auto">
-        <li class="nav-item me-2 ">
-          <a class="nav-link active" aria-current="page" href="#">
-            <img src="images/1x/ins.png" alt="...">
-          </a>
-        </li>
-        <li class="nav-item me-2">
-          <a class="nav-link active" aria-current="page" href="#">
-            <img src="images/1x/wsp.png" alt="...">
-          </a>
-        </li>
-        <li class="nav-item me-2">
-          <a class="nav-link active" aria-current="page" href="#">
-            <img src="images/1x/in.png" alt="...">
-          </a>
-        </li>
-      </ul>
-      <form class="d-flex" role="search">
-        <button class="btn btn-outline-success btn-sm btn-outline-light" type="submit">Login</button>
-      </form>
-  </div>
-</nav>
-
-
-
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-  
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="images/Recurso 1.png" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5></h5>
-        <p></p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="images/1x/banner.png" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5></h5>
-        <p></p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="images/1x/banner.png" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5></h5>
-        <p></p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev z-3" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next z-3" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-
-  <div class="container-fluid position-absolute top-0 start-0 z-2">
-    <img src="images/1x/perfil extendido.png" alt="" class="img-fluid">
-  </div>
-
-</div>
-
-<nav class="navbar navbar-expand-lg bg-primary py-1">
-  <div class="container-fluid">
-    <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link active text-light" aria-current="page" href="#">
-            Acerca de mí 
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active text-light" aria-current="page" href="#">
-            Educacion
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active text-light" aria-current="page" href="#">
-            Experiencia
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active text-light" aria-current="page" href="#">
-            Hard & Soft Skills
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active text-light" aria-current="page" href="#">
-            Proyectos
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<div class="container my-4">
-  <div class="row bg-light rounded-5">
-    <div class="col">
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Área</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Nivel</th>
-            <th scope="col">Categoria</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row" rowspan="">Backend</th>
-            <td><img src="images/iconos/1x/j.png" alt="">               java</td>
-            <td>medio</td>
-            <td>lenguajes</td>
-          </tr>
-          <tr>
-            <th scope="row"></th>
-            <td><img src="images/iconos/1x/sb.png" alt="">           spring boot</td>
-            <td>medio</td>
-            <td>framework</td>
-          </tr>
-          <tr>
-            <th scope="row">Frontend</th>
-            <td colspan="1"><img src="images/iconos/1x/a.png" alt="">Angular</td>
-            <td>medio</td>
-            <td>framework</td>
-          </tr>
-          <tr>
-            <th scope="row"></th>
-            <td colspan="1"><img src="images/iconos/1x/b.png" alt="">        Bootstrap</td>
-            <td>medio</td>
-            <td>framework</td>
-          </tr>
-          <tr>
-            <th scope="row">Data base</th>
-            <td colspan="1"><img src="images/iconos/1x/msql.png" alt="">mySQL</td>
-            <td>medio</td>
-            <td>SGBD</td>
-          </tr>
-          <tr>
-            <th scope="row"></th>
-            <td colspan="1"><img src="images/iconos/1x/mdb.png" alt="">          maria DB</td>
-            <td>medio</td>
-            <td>SGBD</td>
-          </tr>
-          <tr>
-            <th scope="row">Diseño</th>
-            <td colspan="1"><img src="images/iconos/1x/ai.png" alt="">          Adobe Ilustrator</td>
-            <td>avanzado</td>
-            <td>aplicacion</td>
-          </tr>
-          <tr>
-            <th scope="row"></th>
-            <td colspan="1"><img src="images/iconos/1x/ps.png" alt="">          Adobe Photoshop</td>
-            <td>avanzado</td>
-            <td>aplicacion</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-
-</div>
-
-
-
-<div class="container my-4">
-  <div class="row bg-primary rounded-5">
-    <div class="col">
-
-      <div class="card text-dark bg-light border-light mb-3 rounded-5 mt-3">
-        <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">proyecto 1</h5>
-          <p class="card-text">descripcion proyecto 1</p>
-          <p class="card-text"><small class="text-muted">categoria 1</small></p>
-        </div>
-      </div>
-
-      <div class="card text-dark bg-light border-light mb-3 rounded-5 mt-3">
-        <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">proyecto 2</h5>
-          <p class="card-text">descripcion proyecto 2</p>
-          <p class="card-text"><small class="text-muted">categoria 2</small></p>
-        </div>
-      </div>
-
-      <div class="card text-dark bg-light border-light mb-3 rounded-5 mt-3">
-        <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">proyecto 3</h5>
-          <p class="card-text">descripcion proyecto 3</p>
-          <p class="card-text"><small class="text-muted">categoria 3</small></p>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
-
-
-
-<div class="container my-4">
-  <div class="row bg-primary rounded-5">
-    <div class="card-group ">
-      <div class="card rounded-5 my-3 mx-2">
-        <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">instituto/institucion</h5>
-          <p class="card-text">titulo/carrera</p>
-          <p class="card-text"><small class="text-muted">info adicional</small></p>
-        </div>
-      </div>
-      <div class="card rounded-5 my-3 mx-2">
-        <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">instituto/institucion</h5>
-          <p class="card-text">titulo/carrera</p>
-          <p class="card-text"><small class="text-muted">info adicional</small></p>
-        </div>
-      </div>
-      <div class="card rounded-5 my-3 mx-2">
-        <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">instituto/institucion</h5>
-          <p class="card-text">titulo/carrera</p>
-          <p class="card-text"><small class="text-muted">info adicional</small></p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-<div class="container my-4">
-  <div class="row bg-primary rounded-5">
-    <div class="card-group ">
-      <div class="card rounded-5 my-3 mx-2">
-        <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">empresa</h5>
-          <p class="card-text">cargo</p>
-          <p class="card-text"><small class="text-muted">info adicional</small></p>
-        </div>
-      </div>
-      <div class="card rounded-5 my-3 mx-2">
-        <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">empresa</h5>
-          <p class="card-text">cargo</p>
-          <p class="card-text"><small class="text-muted">info adicional</small></p>
-        </div>
-      </div>
-      <div class="card rounded-5 my-3 mx-2">
-        <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">empresa</h5>
-          <p class="card-text">cargo</p>
-          <p class="card-text"><small class="text-muted">info adicional</small></p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
+<app-header></app-header>
+<app-nav></app-nav>
+<app-hard-and-soft-skills></app-hard-and-soft-skills>
+<app-proyectos></app-proyectos>
+<app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
