se agregaron las imagenes locales y se arreglo un error en los servicios

--- a/src/app/components/hard-and-soft-skills/hard-and-soft-skills.component.html
+++ b/src/app/components/hard-and-soft-skills/hard-and-soft-skills.component.html
@@ -1,67 +1,70 @@
 <div class="container my-4">
-    <div class="row bg-light rounded-5">
-      <div class="col">
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Área</th>
-              <th scope="col">Nombre</th>
-              <th scope="col">Nivel</th>
-              <th scope="col">Categoria</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row" rowspan="">Backend</th>
-              <td><img src="assets/img/ic-instagram.png" alt="">               java</td>
-              <td>medio</td>
-              <td>lenguajes</td>
-            </tr>
-            <tr>
-              <th scope="row"></th>
-              <td><img src="images/iconos/1x/sb.png" alt="">           spring boot</td>
-              <td>medio</td>
-              <td>framework</td>
-            </tr>
-            <tr>
-              <th scope="row">Frontend</th>
-              <td colspan="1"><img src="images/iconos/1x/a.png" alt="">Angular</td>
-              <td>medio</td>
-              <td>framework</td>
-            </tr>
-            <tr>
-              <th scope="row"></th>
-              <td colspan="1"><img src="images/iconos/1x/b.png" alt="">        Bootstrap</td>
-              <td>medio</td>
-              <td>framework</td>
-            </tr>
-            <tr>
-              <th scope="row">Data base</th>
-              <td colspan="1"><img src="images/iconos/1x/msql.png" alt="">mySQL</td>
-              <td>medio</td>
-              <td>SGBD</td>
-            </tr>
-            <tr>
-              <th scope="row"></th>
-              <td colspan="1"><img src="images/iconos/1x/mdb.png" alt="">          maria DB</td>
-              <td>medio</td>
-              <td>SGBD</td>
-            </tr>
-            <tr>
-              <th scope="row">Diseño</th>
-              <td colspan="1"><img src="images/iconos/1x/ai.png" alt="">          Adobe Ilustrator</td>
-              <td>avanzado</td>
-              <td>aplicacion</td>
-            </tr>
-            <tr>
-              <th scope="row"></th>
-              <td colspan="1"><img src="images/iconos/1x/ps.png" alt="">          Adobe Photoshop</td>
-              <td>avanzado</td>
-              <td>aplicacion</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+  <div class="row bg-light rounded-5 ">
+    <div class="col my-3 mx-3">
+
+      <h1 class="text-primary text-center">Hard & Soft Skills</h1>
+
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Área</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Nivel</th>
+            <th scope="col">Categoria</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row" rowspan="">Backend</th>
+            <td><img src="" alt="">java</td>
+            <td>medio</td>
+            <td>lenguajes</td>
+          </tr>
+          <tr>
+            <th scope="row"></th>
+            <td><img src="" alt="">spring boot</td>
+            <td>medio</td>
+            <td>framework</td>
+          </tr>
+          <tr>
+            <th scope="row">Frontend</th>
+            <td colspan="1"><img src="" alt="">Angular</td>
+            <td>medio</td>
+            <td>framework</td>
+          </tr>
+          <tr>
+            <th scope="row"></th>
+            <td colspan="1"><img src="" alt="">Bootstrap</td>
+            <td>medio</td>
+            <td>framework</td>
+          </tr>
+          <tr>
+            <th scope="row">Data base</th>
+            <td colspan="1"><img src="" alt="">mySQL</td>
+            <td>medio</td>
+            <td>SGBD</td>
+          </tr>
+          <tr>
+            <th scope="row"></th>
+            <td colspan="1"><img src="" alt="">maria DB</td>
+            <td>medio</td>
+            <td>SGBD</td>
+          </tr>
+          <tr>
+            <th scope="row">Diseño</th>
+            <td colspan="1"><img src="" alt="">Adobe Ilustrator</td>
+            <td>avanzado</td>
+            <td>aplicacion</td>
+          </tr>
+          <tr>
+            <th scope="row"></th>
+            <td colspan="1"><img src="" alt="">Adobe Photoshop</td>
+            <td>avanzado</td>
+            <td>aplicacion</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-  
   </div>
+
+</div>
