--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <app-header></app-header>
 <app-nav></app-nav>
-<app-hard-and-soft-skills></app-hard-and-soft-skills>
-<app-proyectos></app-proyectos>
-<app-experiencia></app-experiencia>
-<app-educacion></app-educacion>
+<div class="container-fluid bg-dark py-1">
+    <app-acerca-de></app-acerca-de>
+    <app-hard-and-soft-skills></app-hard-and-soft-skills>
+    <app-proyectos></app-proyectos>
+    <app-experiencia></app-experiencia>
+    <app-educacion></app-educacion>
+</div>
