--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,1 +1,18 @@
-<p>acerca-de works!</p>
+<div class="container my-4">
+    <div class="row bg-primary rounded-5 ">
+      <div class="col my-3 mx-3">
+
+        <h1 class="text-white text-center">Acerca de mí</h1>
+
+        <div class="card text-dark bg-light border-light rounded-5">
+          <img src="/assets/img/banner2.png" class="card-img-top rounded-top-5" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">sobre mi</h5>
+            <p class="card-text">descripcion mia</p>
+            <p class="card-text"><small class="text-muted"></small></p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
