--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,30 +1,36 @@
-<div class="container my-4">
+  <div class="container my-4">
     <div class="row bg-primary rounded-5">
-      <div class="card-group ">
-        <div class="card rounded-5 my-3 mx-2">
-          <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">instituto/institucion</h5>
-            <p class="card-text">titulo/carrera</p>
-            <p class="card-text"><small class="text-muted">info adicional</small></p>
+      <div class="col mx-3 my-3">
+
+        <h1 class="text-white text-center">Educación</h1>
+
+        <div class="card-group ">
+          <div class="card rounded-5 my-3 mx-2">
+            <img src="/assets/img/ic-fader.jpg" class="card-img-top rounded-top-5" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">E.T.N°6 Fernando Fader</h5>
+              <p class="card-text">Técnico en Diseño y Comunicación Publicitaria</p>
+              <p class="card-text"><small class="text-muted">2014-2019(completo)</small></p>
+            </div>
+          </div>
+          <div class="card rounded-5 my-3 mx-2">
+            <img src="/assets/img/ic.utn.jpg" class="card-img-top rounded-top-5" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Universidad Tecnológica Nacional</h5>
+              <p class="card-text">ingenieria en sistemas</p>
+              <p class="card-text"><small class="text-muted">2020-2021</small></p>
+            </div>
+          </div>
+          <div class="card rounded-5 my-3 mx-2">
+            <img src="/assets/img/ic.utn.jpg" class="card-img-top rounded-top-5" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Universidad Tecnológica Nacional</h5>
+              <p class="card-text">ingenieria en sistemas</p>
+              <p class="card-text"><small class="text-muted">2022</small></p>
+            </div>
           </div>
         </div>
-        <div class="card rounded-5 my-3 mx-2">
-          <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">instituto/institucion</h5>
-            <p class="card-text">titulo/carrera</p>
-            <p class="card-text"><small class="text-muted">info adicional</small></p>
-          </div>
-        </div>
-        <div class="card rounded-5 my-3 mx-2">
-          <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">instituto/institucion</h5>
-            <p class="card-text">titulo/carrera</p>
-            <p class="card-text"><small class="text-muted">info adicional</small></p>
-          </div>
-        </div>
+
       </div>
     </div>
   </div>
