--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,31 +1,36 @@
-
 <div class="container my-4">
   <div class="row bg-primary rounded-5">
-    <div class="card-group ">
-      <div class="card rounded-5 my-3 mx-2">
-        <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">empresa</h5>
-          <p class="card-text">cargo</p>
-          <p class="card-text"><small class="text-muted">info adicional</small></p>
+    <div class="col mx-3 my-3">
+
+      <h1 class="text-white text-center">Experiencia</h1>
+
+      <div class="card-group ">
+        <div class="card rounded-5 my-3 mx-2">
+          <img src="/assets/img/banner1.png" class="card-img-top rounded-top-5" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">empresa</h5>
+            <p class="card-text">cargo</p>
+            <p class="card-text"><small class="text-muted">info adicional</small></p>
+          </div>
+        </div>
+        <div class="card rounded-5 my-3 mx-2">
+          <img src="/assets/img/banner1.png" class="card-img-top rounded-top-5" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">empresa</h5>
+            <p class="card-text">cargo</p>
+            <p class="card-text"><small class="text-muted">info adicional</small></p>
+          </div>
+        </div>
+        <div class="card rounded-5 my-3 mx-2">
+          <img src="/assets/img/banner1.png" class="card-img-top rounded-top-5" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">empresa</h5>
+            <p class="card-text">cargo</p>
+            <p class="card-text"><small class="text-muted">info adicional</small></p>
+          </div>
         </div>
       </div>
-      <div class="card rounded-5 my-3 mx-2">
-        <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">empresa</h5>
-          <p class="card-text">cargo</p>
-          <p class="card-text"><small class="text-muted">info adicional</small></p>
-        </div>
-      </div>
-      <div class="card rounded-5 my-3 mx-2">
-        <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">empresa</h5>
-          <p class="card-text">cargo</p>
-          <p class="card-text"><small class="text-muted">info adicional</small></p>
-        </div>
-      </div>
+
     </div>
   </div>
 </div>
