--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,75 +1,75 @@
-<nav class="navbar navbar-expand-lg bg-primary py-0 ">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="...">
-        <img src="https://www.economia.gob.ar/argentinaprograma/logo-blanco-vertical.png" alt="Bootstrap" width="" height="30">
-      </a>
-        <ul class="list-group list-group-horizontal list-unstyled ms-auto">
-          <li class="nav-item me-2 ">
-            <a class="nav-link active" aria-current="page" href="#">
-              <img src="images/1x/ins.png" alt="...">
-            </a>
-          </li>
-          <li class="nav-item me-2">
-            <a class="nav-link active" aria-current="page" href="#">
-              <img src="images/1x/wsp.png" alt="...">
-            </a>
-          </li>
-          <li class="nav-item me-2">
-            <a class="nav-link active" aria-current="page" href="#">
-              <img src="images/1x/in.png" alt="...">
-            </a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <button class="btn btn-outline-success btn-sm btn-outline-light" type="submit">Login</button>
-        </form>
-    </div>
-  </nav>
-  
-  
-  
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-  
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="/src/assets/img/banner1.png" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5></h5>
-          <p></p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="/src/assets/img/banner2.png" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5></h5>
-          <p></p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="/src/assets/img/banner1.png" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5></h5>
-          <p></p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev z-3" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next z-3" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  
-    <div class="container-fluid position-absolute top-0 start-0 z-2">
-      <img src="/src/assets/img/perfil extendido.png" alt="" class="img-fluid">
-    </div>
-  
+<nav class="navbar navbar-expand-lg bg-primary py-0">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="...">
+      <img src="/assets/img/ic-argprog.png" alt="Bootstrap" width="" height="30">
+    </a>
+      <ul class="list-group list-group-horizontal list-unstyled ms-auto">
+        <li class="nav-item me-2 ">
+          <a class="nav-link active" aria-current="page" href="#">
+            <img src="/assets/img/ic-instagram.png" alt="...">
+          </a>
+        </li>
+        <li class="nav-item me-2">
+          <a class="nav-link active" aria-current="page" href="#">
+            <img src="/assets/img/ic-wsp.png" alt="...">
+          </a>
+        </li>
+        <li class="nav-item me-2">
+          <a class="nav-link active" aria-current="page" href="#">
+            <img src="/assets/img/ic-linkedin.png" alt="...">
+          </a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <button class="btn btn-outline-success btn-sm btn-outline-light" type="submit">Login</button>
+      </form>
   </div>
+</nav>
+
+
+
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+  
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="/assets/img/banner1.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5></h5>
+        <p></p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/img/banner2.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5></h5>
+        <p></p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/assets/img/banner1.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5></h5>
+        <p></p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev z-3" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next z-3" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+
+  <div class="container-fluid position-absolute top-0 start-0 z-2">
+    <img src="/assets/img/perfil extendido.png" alt="" class="img-fluid">
+  </div>
+
+</div>
