--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -1,34 +1,36 @@
-<div class="container my-4">
+  <div class="container my-4">
     <div class="row bg-primary rounded-5">
-      <div class="col">
-  
+      <div class="col my-3 mx-3">
+
+        <h1 class="text-white text-center">Proyectos</h1>
+
         <div class="card text-dark bg-light border-light mb-3 rounded-5 mt-3">
-          <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
+          <img src="/assets/img/banner2.png" class="card-img-top rounded-top-5" alt="...">
           <div class="card-body">
             <h5 class="card-title">proyecto 1</h5>
             <p class="card-text">descripcion proyecto 1</p>
             <p class="card-text"><small class="text-muted">categoria 1</small></p>
           </div>
         </div>
-  
+
         <div class="card text-dark bg-light border-light mb-3 rounded-5 mt-3">
-          <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
+          <img src="/assets/img/banner2.png" class="card-img-top rounded-top-5" alt="...">
           <div class="card-body">
             <h5 class="card-title">proyecto 2</h5>
             <p class="card-text">descripcion proyecto 2</p>
             <p class="card-text"><small class="text-muted">categoria 2</small></p>
           </div>
         </div>
-  
+
         <div class="card text-dark bg-light border-light mb-3 rounded-5 mt-3">
-          <img src="images/1x/banner.png" class="card-img-top rounded-top-5" alt="...">
+          <img src="/assets/img/banner2.png" class="card-img-top rounded-top-5" alt="...">
           <div class="card-body">
             <h5 class="card-title">proyecto 3</h5>
             <p class="card-text">descripcion proyecto 3</p>
             <p class="card-text"><small class="text-muted">categoria 3</small></p>
           </div>
         </div>
-  
+
       </div>
     </div>
   </div>
