--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -38,21 +38,21 @@
 
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/assets/img/banner1.png" class="d-block w-100" alt="...">
+      <img [src]="miPortfolio.bannerUno" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5></h5>
         <p></p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/banner2.png" class="d-block w-100" alt="...">
+      <img [src]="miPortfolio.bannerDos" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5></h5>
         <p></p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/banner1.png" class="d-block w-100" alt="...">
+      <img [src]="miPortfolio.bannerTres" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5></h5>
         <p></p>
