se agrego el sistema de routing, junto a el componente footer y login.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <app-header></app-header>
 <app-nav></app-nav>
 <div class="container-fluid bg-dark py-1">
-    <app-acerca-de></app-acerca-de>
-    <app-hard-and-soft-skills></app-hard-and-soft-skills>
-    <app-proyectos></app-proyectos>
-    <app-experiencia></app-experiencia>
-    <app-educacion></app-educacion>
+    <router-outlet></router-outlet>
 </div>
+<app-footer></app-footer>
