--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,7 +21,7 @@
         </li>
       </ul>
       <form class="d-flex" role="search">
-        <button class="btn btn-outline-success btn-sm btn-outline-light" type="submit">Login</button>
+        <button class="btn btn-outline-success btn-sm btn-outline-light" routerLink="Login" type="submit">Login</button>
       </form>
   </div>
 </nav>
