--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -6,27 +6,27 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
         <ul class="nav justify-content-center">
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="#">
+            <a class="nav-link active text-light" aria-current="page" routerLink="AcercaDe">
               Acerca de mí 
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="#">
+            <a class="nav-link active text-light" aria-current="page" routerLink="Educacion">
               Educacion
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="#">
+            <a class="nav-link active text-light" aria-current="page" routerLink="Experiencia">
               Experiencia
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="#">
+            <a class="nav-link active text-light" aria-current="page" routerLink="HardAndSoftSkills">
               Hard & Soft Skills
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-light" aria-current="page" href="#">
+            <a class="nav-link active text-light" aria-current="page" routerLink="Proyectos">
               Proyectos
             </a>
           </li>
