se conecto el componente educacion al backend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <app-nav></app-nav>
-<div class="container-fluid bg-dark py-1">
-    <router-outlet></router-outlet>
-</div>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
+<nav class="navbar py-2">
+    x
+  </nav>
