--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,27 +1,8 @@
-<nav class="navbar navbar-expand-lg bg-primary py-0 fixed-bottom">
+
+<nav class="navbar bg-primary py-2 mt-3 fixed-bottom">
     <div class="container-fluid">
-      <a class="navbar-brand" href="...">
-        <img src="/assets/img/ic-argprog.png" alt="Bootstrap" width="" height="30">
-      </a>
-        <ul class="list-group list-group-horizontal list-unstyled ms-auto">
-          <li class="nav-item me-2 ">
-            <a class="nav-link active" aria-current="page" href="#">
-              <img src="/assets/img/ic-instagram.png" alt="...">
-            </a>
-          </li>
-          <li class="nav-item me-2">
-            <a class="nav-link active" aria-current="page" href="#">
-              <img src="/assets/img/ic-wsp.png" alt="...">
-            </a>
-          </li>
-          <li class="nav-item me-2">
-            <a class="nav-link active" aria-current="page" href="#">
-              <img src="/assets/img/ic-linkedin.png" alt="...">
-            </a>
-          </li>
-        </ul>
         <form class="d-flex" role="search">
-          <button class="btn btn-outline-success btn-sm btn-outline-light" routerLink="Login" type="submit">Login</button>
+          <button class="btn btn-outline-success btn-sm btn-outline-light" routerLink="Login" type="submit">inicio</button>
         </form>
     </div>
-  </nav>
+</nav>
