--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,18 +1,25 @@
-<div class="container my-4">
-    <div class="row bg-primary rounded-5 ">
-      <div class="col my-3 mx-3">
+<div class="container my-4 bg-primary rounded-5">
 
-        <h1 class="text-white text-center">Acerca de mí</h1>
+    <div class="row">
+      <div class="col-4"></div>
+      <div class="col-7 border-light my-3">
+        <h1 class="align-middle fw-bold d-inline text-white text-center py-0">Acerca de mí   </h1>
+        <button class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="Login" type="submit">    +    </button>
+      </div>
+      <div class="col-1"></div>
+    </div>
 
-        <div class="card text-dark bg-light border-light rounded-5">
-          <img src="/assets/img/banner2.png" class="card-img-top rounded-top-5" alt="...">
+    <div class="row ">
+      <div class="col mb-3 mx-3 mt-0">
+        <div class="card text-dark bg-light border-0 rounded-5">
+          <img src="/assets/img/banner2.png" class="card-img-top rounded-5" alt="...">
           <div class="card-body">
             <h5 class="card-title">sobre mi</h5>
             <p class="card-text">descripcion mia</p>
             <p class="card-text"><small class="text-muted"></small></p>
           </div>
         </div>
-
       </div>
     </div>
+
   </div>
