--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,36 +1,52 @@
-  <div class="container my-4">
-    <div class="row bg-primary rounded-5">
-      <div class="col mx-3 my-3">
+  <div class="container bg-primary my-4 rounded-5">
 
-        <h1 class="text-white text-center">Educación</h1>
+    <div class="row">
+      <div class="col-4"></div>
+      <div class="col-7 border-light my-3">
+        <h1 class="align-middle fw-bold d-inline text-white text-center py-0">Educación   </h1>
+        <button class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="Login" type="submit">    +    </button>
+      </div>
+      <div class="col-1"></div>
+    </div>
 
+    <div class="row">
+      <div class="col">
         <div class="card-group ">
-          <div class="card rounded-5 my-3 mx-2">
-            <img src="/assets/img/ic-fader.jpg" class="card-img-top rounded-top-5" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">E.T.N°6 Fernando Fader</h5>
-              <p class="card-text">Técnico en Diseño y Comunicación Publicitaria</p>
-              <p class="card-text"><small class="text-muted">2014-2019(completo)</small></p>
-            </div>
-          </div>
-          <div class="card rounded-5 my-3 mx-2">
-            <img src="/assets/img/ic.utn.jpg" class="card-img-top rounded-top-5" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Universidad Tecnológica Nacional</h5>
-              <p class="card-text">ingenieria en sistemas</p>
-              <p class="card-text"><small class="text-muted">2020-2021</small></p>
-            </div>
-          </div>
-          <div class="card rounded-5 my-3 mx-2">
-            <img src="/assets/img/ic.utn.jpg" class="card-img-top rounded-top-5" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Universidad Tecnológica Nacional</h5>
-              <p class="card-text">ingenieria en sistemas</p>
-              <p class="card-text"><small class="text-muted">2022</small></p>
-            </div>
-          </div>
-        </div>
 
+          <div *ngFor ="let educacion of educaciones" class="card rounded-5 border-0 mb-3 mx-3 mt-0"><!--*ngIf = "educaciones.length > 0 "-->
+            <img [src]="educacion.img" class="card-img-top rounded-5" alt="..."><!--"/assets/img/ic-fader.jpg"-->
+            <div class="card-body">
+              <h5 class="card-title">{{educacion.institucion}}</h5>
+              <p class="card-text">{{educacion.titulo}}</p>
+              <p class="card-text">{{educacion.descripcion}}</p>
+              <p class="card-text"><small class="text-muted">{{educacion.estado}}</small></p>
+            </div>
+          </div>
+
+          <div class="card rounded-5 border-0 mb-3 mx-3 mt-0">
+            <img src="/assets/img/ic-fader.jpg" class="card-img-top rounded-5" alt="...">
+            <div class="card-body">
+
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">institución:</span>
+                <input type="text" class="form-control" placeholder="E.T.N°6 Fernando Fader" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">Titulo:</span>
+                <input type="text" class="form-control" placeholder="Técnico en Diseño y Comunicación Publicitaria" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="basic-addon1">periodo:</span>
+                <input type="text" class="form-control" placeholder="2014-2019(completo)" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+            </div>
+          </div>
+
+
+        </div>
       </div>
     </div>
+
   </div>
