--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,28 +1,36 @@
-<div class="container my-4">
-  <div class="row bg-primary rounded-5">
-    <div class="col mx-3 my-3">
+<div class="container my-4 bg-primary rounded-5">
 
-      <h1 class="text-white text-center">Experiencia</h1>
+  <div class="row">
+    <div class="col-4"></div>
+    <div class="col-7 border-light my-3">
+      <h1 class="align-middle fw-bold d-inline text-white text-center py-0">Experiencia   </h1>
+      <button class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="Login" type="submit">    +    </button>
+    </div>
+    <div class="col-1"></div>
+  </div>
 
-      <div class="card-group ">
-        <div class="card rounded-5 my-3 mx-2">
-          <img src="/assets/img/banner1.png" class="card-img-top rounded-top-5" alt="...">
+  <div class="row">
+
+    <div class="col">
+      <div class="card-group">
+        <div class="card rounded-5 mb-3 mx-3 mt-0">
+          <img src="/assets/img/banner1.png" class="card-img-top rounded-5" alt="...">
           <div class="card-body">
             <h5 class="card-title">empresa</h5>
             <p class="card-text">cargo</p>
             <p class="card-text"><small class="text-muted">info adicional</small></p>
           </div>
         </div>
-        <div class="card rounded-5 my-3 mx-2">
-          <img src="/assets/img/banner1.png" class="card-img-top rounded-top-5" alt="...">
+        <div class="card rounded-5 mb-3 mx-3 mt-0">
+          <img src="/assets/img/banner1.png" class="card-img-top rounded-5" alt="...">
           <div class="card-body">
             <h5 class="card-title">empresa</h5>
             <p class="card-text">cargo</p>
             <p class="card-text"><small class="text-muted">info adicional</small></p>
           </div>
         </div>
-        <div class="card rounded-5 my-3 mx-2">
-          <img src="/assets/img/banner1.png" class="card-img-top rounded-top-5" alt="...">
+        <div class="card rounded-5 mb-3 mx-3 mt-0">
+          <img src="/assets/img/banner1.png" class="card-img-top rounded-5" alt="...">
           <div class="card-body">
             <h5 class="card-title">empresa</h5>
             <p class="card-text">cargo</p>
