--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -1,11 +1,19 @@
-  <div class="container my-4">
-    <div class="row bg-primary rounded-5">
-      <div class="col my-3 mx-3">
+  <div class="container my-4 bg-primary rounded-5 ">
 
-        <h1 class="text-white text-center">Proyectos</h1>
+    <div class="row">
+      <div class="col-4"></div>
+      <div class="col-7 border-light my-3">
+        <h1 class="align-middle fw-bold d-inline text-white text-center py-0">Proyectos   </h1>
+        <button class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="Login" type="submit">    +    </button>
+      </div>
+      <div class="col-1"></div>
+    </div>
 
-        <div class="card text-dark bg-light border-light mb-3 rounded-5 mt-3">
-          <img src="/assets/img/banner2.png" class="card-img-top rounded-top-5" alt="...">
+    <div class="row">
+      <div class="col">
+
+        <div class="card text-dark bg-light rounded-5 border-0 mb-3 mx-3 mt-0">
+          <img src="/assets/img/banner2.png" class="card-img-top rounded-5" alt="...">
           <div class="card-body">
             <h5 class="card-title">proyecto 1</h5>
             <p class="card-text">descripcion proyecto 1</p>
@@ -13,8 +21,8 @@
           </div>
         </div>
 
-        <div class="card text-dark bg-light border-light mb-3 rounded-5 mt-3">
-          <img src="/assets/img/banner2.png" class="card-img-top rounded-top-5" alt="...">
+        <div class="card text-dark bg-light rounded-5 border-0 mb-3 mx-3 mt-0">
+          <img src="/assets/img/banner2.png" class="card-img-top rounded-5" alt="...">
           <div class="card-body">
             <h5 class="card-title">proyecto 2</h5>
             <p class="card-text">descripcion proyecto 2</p>
@@ -22,8 +30,8 @@
           </div>
         </div>
 
-        <div class="card text-dark bg-light border-light mb-3 rounded-5 mt-3">
-          <img src="/assets/img/banner2.png" class="card-img-top rounded-top-5" alt="...">
+        <div class="card text-dark bg-light rounded-5 border-0 mb-3 mx-3 mt-0">
+          <img src="/assets/img/banner2.png" class="card-img-top rounded-5" alt="...">
           <div class="card-body">
             <h5 class="card-title">proyecto 3</h5>
             <p class="card-text">descripcion proyecto 3</p>
