--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
 
         <h1 class="text-white text-center">Login</h1>
 
-        <form class="bg-light rounded-5 px-3 py-3 my-4">
+        <form  class="bg-light rounded-5 px-3 py-3 my-4"><!--[formGroup]= "formLogin" (ngSubmit)="onSubmit()"-->
           <div class="mb-3 ">
             <label for="exampleInputEmail1" class="form-label" >Email address</label>
             <input formControlName="email" type="email" class="form-control border-dark" id="exampleInputEmail1" aria-describedby="emailHelp" >
@@ -13,7 +13,8 @@
             <label for="exampleInputPassword1" class="form-label">Password</label>
             <input formControlName="password" type="password" class="form-control border-dark" id="exampleInputPassword1">
           </div>
-          <button type="submit" value="Enviar" class="btn btn-primary">enviar</button>
+          <!--<button type="submit" value="Enviar" class="btn btn-primary">enviar</button>-->
+          <input type="submit" value="Enviar">
         </form>
 
       </div>
