--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,19 +4,33 @@
 
         <h1 class="text-white text-center">Login</h1>
 
-        <form  class="bg-light rounded-5 px-3 py-3 my-4"><!--[formGroup]= "formLogin" (ngSubmit)="onSubmit()"-->
+        <form  [formGroup]= "formLogin" (ngSubmit)="onSubmit()" class="bg-light rounded-5 px-3 py-3 my-4">
           <div class="mb-3 ">
-            <label for="exampleInputEmail1" class="form-label" >Email address</label>
-            <input formControlName="email" type="email" class="form-control border-dark" id="exampleInputEmail1" aria-describedby="emailHelp" >
+            <label class="form-label" >Email address</label>
+            <input formControlName="email" type="email" class="form-control border-dark" >
           </div>
           <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input formControlName="password" type="password" class="form-control border-dark" id="exampleInputPassword1">
+            <label class="form-label">Password</label>
+            <input formControlName="password" type="password" class="form-control border-dark">
           </div>
-          <!--<button type="submit" value="Enviar" class="btn btn-primary">enviar</button>-->
           <input type="submit" value="Enviar">
+          <button *ngIf = "isLoged==true" type="submit" value="Enviar" class="btn btn-primary">enviar</button>
         </form>
 
       </div>
     </div>
   </div>
+<!--
+  <form  [formGroup]= "formLogin" (ngSubmit)="onSubmit()" class="bg-light rounded-5 px-3 py-3 my-4">
+    <div class="mb-3 ">
+      <label for="exampleInputEmail1" class="form-label" >Email address</label>
+      <input formControlName="email" type="email" class="form-control border-dark" id="exampleInputEmail1" aria-describedby="emailHelp" >
+    </div>
+    <div class="mb-3">
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input formControlName="password" type="password" class="form-control border-dark" id="exampleInputPassword1">
+    </div>
+    <button type="submit" value="Enviar" class="btn btn-primary">enviar</button>
+    <input type="submit" value="Enviar">
+  </form>
+-->
