--- a/src/app/components/edit-and-new/edit-and-new.component.html
+++ b/src/app/components/edit-and-new/edit-and-new.component.html
@@ -1,55 +1,49 @@
-<!--
+
 <div class="container bg-primary my-4 rounded-5">
 
     <div class="row">
         <div class="col-4"></div>
         <div class="col-7 border-light my-3">
           <h1 class="align-middle fw-bold d-inline text-white text-center py-0">Edit And New  </h1>
-          <button class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="Login" type="submit">    +    </button>
         </div>
         <div class="col-1"></div>
       </div>
  
       <form (ngSubmit)="onUpdate()">
 
-        <div class="card rounded-5 border-0 mb-3 mx-3 mt-0">
+        <div class="card rounded-5 border-0 mb-0 mx-3 mt-0">
           <img src="/assets/img/ic-fader.jpg" class="card-img-top rounded-5" alt="...">
-          <div class="card-body">
-  
-            <div class="form-group">
-              <span class="input-group-text" id="basic-addon1" for="imagenE">nombre imagen</span>
-              <input type="text" class="form-control" id="imagenEId" name="imagenE" [(ngModel)]="educacion.img" required>
-            </div>
-
-            
+          <div class="card-body my-0">
   
             <div class="input-group mb-3">
               <span class="input-group-text" id="basic-addon1">institución:</span>
-              <input type="text" class="form-control" id="institucionEId" name="institucionE" [(ngModel)]="educacion.institucion"
-              placeholder="E.T.N°6 Fernando Fader" aria-label="Username" aria-describedby="basic-addon1">
+              <input type="text" class="form-control" id="imgEId" name="imgE" [(ngModel)]="educacion.img">
+            </div>
+  
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="basic-addon1">institución:</span>
+              <input type="text" class="form-control" id="institucionEId" name="institucionE" [(ngModel)]="educacion.institucion">
             </div>
   
             <div class="input-group mb-3">
               <span class="input-group-text" id="basic-addon1">Titulo:</span>
-              <input type="text" class="form-control" id="tituloEId" name="tituloE" [(ngModel)]="educacion.titulo"
-              placeholder="Técnico en Diseño y Comunicación Publicitaria" aria-label="Username" aria-describedby="basic-addon1">
+              <input type="text" class="form-control" id="tituloEId" name="tituloE" [(ngModel)]="educacion.titulo">
             </div>
   
             <div class="input-group mb-3">
               <span class="input-group-text" id="basic-addon1">descripcion:</span>
-              <input type="text" class="form-control" id="descripcionEId" name="descripcionE" [(ngModel)]="educacion.descripcion"
-              placeholder="2014-2019(completo)" aria-label="Username" aria-describedby="basic-addon1">
+              <input type="text" class="form-control" id="descripcionEId" name="descripcionE" [(ngModel)]="educacion.descripcion">
             </div>
   
-            <div class="form-group">
-              <span class="input-group-text" id="basic-addon1">estado:</span>
-              <input type="text" class="form-control" id="estadoEId" name="estadoE" [(ngModel)]="educacion.estado" placeholder="2014-2019(completo)" aria-label="Username" aria-describedby="basic-addon1">
-            </div> 
+            <div class="input-group mb-3">
+              <span class="input-group-text" id="basic-addon1">descripcion:</span>
+              <input type="text" class="form-control" id="estadoEId" name="estadoE" [(ngModel)]="educacion.estado">
+            </div>
           
           
           </div>
 
-          <button type="submit" class="btn btn-primary">
+          <button type="submit" class="btn btn-dark mb-3 mx-5">
             Editar educacion
           </button>
 
@@ -59,8 +53,8 @@
       
 </div>
 
--->
 
+<!--
 <div class="container" *ngIf="educacion">
   <div class="row">
       <div>
@@ -92,4 +86,5 @@
       </div>
   </div>
 </div>
+-->
 
