--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -4,7 +4,7 @@
       <div class="col-4"></div>
       <div class="col-7 border-light my-3">
         <h1 class="align-middle fw-bold d-inline text-white text-center py-0">Educación   </h1>
-        <button  *ngIf ="isLoged==true"class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="/EditAndNew" type="submit">    +    </button>
+        <button  *ngIf ="isLoged==true"class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="/New" type="submit">    +    </button>
       </div>
       <div class="col-1"></div>
     </div>
@@ -22,51 +22,11 @@
               <p class="card-text">{{educacion.titulo}}</p>
               <p class="card-text">{{educacion.descripcion}}</p>
               <p class="card-text"><small class="text-muted">{{educacion.estado}}</small></p>
-              <button *ngIf ="isLoged==true" class="d-inline btn-danger btn btn-outline-success btn-outline-light py-0" routerLink="" type="submit">borrar</button>
+              <button *ngIf ="isLoged==true" (click)="delete(educacion.id)" class="d-inline btn-danger btn btn-outline-success btn-outline-light py-0" type="submit">borrar</button>
               <button *ngIf ="isLoged==true" class="btn btn-outline-success btn-dark btn-outline-light py-0" routerLink="/EditAndNew/educacion/{{educacion.id}}" type="submit">editar</button>
             </div>
           </div>
-
-
-
-
-
-          <div  class="card rounded-5 border-0 mb-3 mx-3 mt-0">
-            <img src="/assets/img/ic-fader.jpg" class="card-img-top rounded-5" alt="...">
-            <div class="card-body">
-
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">nombre imagen</span>
-                <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
-              </div>
-
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">institución:</span>
-                <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
-              </div>
-
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">Titulo:</span>
-                <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
-              </div>
-
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">descripcion:</span>
-                <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
-              </div>
-              
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">periodo:</span>
-                <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
-              </div>
-
-              <div class="input-group mb-3">
-                <span class="input-group-text" id="basic-addon1">estado:</span>
-                <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
-              </div>
-              
-            </div>
-          </div>
+          
 
 
         </div>
