--- a/src/app/components/edit-and-new/edit-and-new.component.html
+++ b/src/app/components/edit-and-new/edit-and-new.component.html
@@ -16,28 +16,28 @@
           <div class="card-body my-0">
   
             <div class="input-group mb-3">
-              <span class="input-group-text" id="basic-addon1">institución:</span>
-              <input type="text" class="form-control" id="imgEId" name="imgE" [(ngModel)]="educacion.img">
+              <span class="input-group-text" id="basic-addon1">img:</span>
+              <input type="text" class="form-control" id="imgE" name="imgE" [(ngModel)]="educacion.img">
             </div>
   
             <div class="input-group mb-3">
               <span class="input-group-text" id="basic-addon1">institución:</span>
-              <input type="text" class="form-control" id="institucionEId" name="institucionE" [(ngModel)]="educacion.institucion">
+              <input type="text" class="form-control" id="institucionE" name="institucionE" [(ngModel)]="educacion.institucion">
             </div>
   
             <div class="input-group mb-3">
               <span class="input-group-text" id="basic-addon1">Titulo:</span>
-              <input type="text" class="form-control" id="tituloEId" name="tituloE" [(ngModel)]="educacion.titulo">
+              <input type="text" class="form-control" id="tituloE" name="tituloE" [(ngModel)]="educacion.titulo">
             </div>
   
             <div class="input-group mb-3">
               <span class="input-group-text" id="basic-addon1">descripcion:</span>
-              <input type="text" class="form-control" id="descripcionEId" name="descripcionE" [(ngModel)]="educacion.descripcion">
+              <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="educacion.descripcion">
             </div>
   
             <div class="input-group mb-3">
-              <span class="input-group-text" id="basic-addon1">descripcion:</span>
-              <input type="text" class="form-control" id="estadoEId" name="estadoE" [(ngModel)]="educacion.estado">
+              <span class="input-group-text" id="basic-addon1">estado:</span>
+              <input type="text" class="form-control" id="estadoE" name="estadoE" [(ngModel)]="educacion.estado">
             </div>
           
           
