--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-4"></div>
       <div class="col-7 border-light my-3">
-        <h1 class="align-middle fw-bold d-inline text-white text-center py-0">Proyectos   </h1>
+        <h1 class="align-middle fw-bold d-inline text-white text-center py-0">Proyectos(Proximamente)    </h1>
         <button class="d-inline btn btn-outline-success btn-sm btn-outline-light py-0" routerLink="Login" type="submit">    +    </button>
       </div>
       <div class="col-1"></div>
@@ -11,7 +11,7 @@
 
     <div class="row">
       <div class="col">
-
+        <!--
         <div class="card text-dark bg-light rounded-5 border-0 mb-3 mx-3 mt-0">
           <img src="/assets/img/banner2.png" class="card-img-top rounded-5" alt="...">
           <div class="card-body">
@@ -20,25 +20,7 @@
             <p class="card-text"><small class="text-muted">categoria 1</small></p>
           </div>
         </div>
-
-        <div class="card text-dark bg-light rounded-5 border-0 mb-3 mx-3 mt-0">
-          <img src="/assets/img/banner2.png" class="card-img-top rounded-5" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">proyecto 2</h5>
-            <p class="card-text">descripcion proyecto 2</p>
-            <p class="card-text"><small class="text-muted">categoria 2</small></p>
-          </div>
-        </div>
-
-        <div class="card text-dark bg-light rounded-5 border-0 mb-3 mx-3 mt-0">
-          <img src="/assets/img/banner2.png" class="card-img-top rounded-5" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">proyecto 3</h5>
-            <p class="card-text">descripcion proyecto 3</p>
-            <p class="card-text"><small class="text-muted">categoria 3</small></p>
-          </div>
-        </div>
-
+        -->
       </div>
     </div>
   </div>
